--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
@@ -13,6 +13,9 @@
 <div class="row">
     <div class="col-lg-12">
         <!-- /.panel-heading -->
+        <div class="panel-heading">
+            <a href="/Pago/EditarPago" class="pull-right btn btn-info" style="margin-bottom:5px;"  title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span>Editar nomina</a>
+        </div>
         <div class="panel-body">
             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                 <thead>
@@ -22,8 +25,7 @@
                         <th>Retenciones</th>
                         <th>Bono de Alimentación</th>
                         <th>Cargas</th>
-                        <th>Neto a pagar</th>
-                        <th>Detalle</th>
+                        <th>Neto a pagar</th>                        
                     </tr>
                 </thead>
                 <tbody>
@@ -35,14 +37,7 @@
                             <td style="color: red">- @( (user.Retenciones / 2).ToString("C") )</td>
                             <td style="color: green">@( (user.BonoAlimentacion).ToString("C") )</td>
                             <td style="color: red">- @( (user.costoCargas).ToString("C") )</td>
-                            <td>@((user.MontoTotal).ToString("C"))</td>
-                            <td>
-                                <center>
-                                    <a title="Ver" data-toggle="modal" data-target="#myModal" onclick="">
-                                        <a href="/Pago/EditarPago" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
-                                    </a>
-                                </center>
-                            </td>
+                            <td>@((user.MontoTotal).ToString("C"))</td>                            
                         </tr>
                     }
 
