--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -147,6 +147,10 @@
                             <label for="codempleado">Codigo de Empleado</label>
                             <input  type="text" id="codempleado" name="codempleado" placeholder="000001" class="form-control" required/>
                         </div>
+                        <div class="col-xs-3">
+                            <label for="fecha_ingreso">Fecha de Ingreso</label>
+                            <input required id="fecha_ingreso" name="fecha_ingreso" type="date" autofocus size="0" class="form-control">
+                        </div>
                     </div>
                    <div class="row">
                        <div class="col-xs-5">
